# envoy_recorder

./: .gitignore  .pre-commit-config.yaml  README.md  envoy_record_individual_inverters.py  envoy_record_whole_system_production.py  envoy_tinkering_notebook.py  main.py  pyproject.toml
example_envoy_json_data/: device_data_1767696755.json  device_data_1767696802.json  device_data_1767697035.json
marimo_notebooks/: analyse_csv_data.py  dataframe_loading_appending_saving_tinkering.py  json_to_dataframe_tinkering.py  plot_parquet_solar_data.py  polars_tinkering.py
scripts/: record.py
src/envoy_recorder/: config_loader.py  envoy_recorder.py  json_to_dataframe.py  jsonl_to_dataframe.py  schemas.py
tests/: test_config_loader.py  test_data.jsonl  test_envoy_recorder.py  test_json_to_dataframe.py  test_jsonl_to_dataframe.py
