[project]
name = "envoy-recorder"
version = "0.1.0"
description = "Capture data from Enphase Envoy and save to disk"
readme = "README.md"
authors = [
    { name = "Jack Kelly", email = "jack@openclimatefix.org" }
]
requires-python = ">=3.14"
dependencies = [
    "patito>=0.8.5",
    "polars>=1.36.1",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sentry-sdk>=2.49.0",
]

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "google-genai>=1.56.0",  # For marimo LLM integration
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "pytest>=9.0.2",
    "pydantic-ai>=1.40.0",  # For marimo LLM integration
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 99
